[gd_scene load_steps=6 format=3 uid="uid://d2xyedecm45dw"]

[ext_resource type="Script" path="res://scenes/pausemenue/pause_menu.gd" id="1_h7r06"]
[ext_resource type="PackedScene" uid="uid://foaofi1p2uax" path="res://scenes/Charakters/FrogClipping.tscn" id="2_utfgo"]
[ext_resource type="Texture2D" uid="uid://gh6vpad0gqj7" path="res://assets/art/spritesObjects/tx_goal_truck.png" id="3_ju436"]
[ext_resource type="Texture2D" uid="uid://dox3lojsuus8g" path="res://assets/art/spritesObjects/texture_object_box.png" id="4_mftib"]
[ext_resource type="PackedScene" uid="uid://bjobche7h23v4" path="res://scenes/Charakters/customer_circle.tscn" id="5_3w8rr"]

[node name="Pause_Menu" type="Node"]
process_mode = 3
script = ExtResource("1_h7r06")

[node name="PausePanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -1094.0
offset_right = 4.0
offset_bottom = -1094.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseText" type="Label" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -427.0
offset_top = -367.0
offset_right = 421.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -127.5
offset_right = 182.0
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Resume" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Retry" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="Exit" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Go to main menu
"

[node name="Intro" type="Panel" parent="."]
offset_top = -1072.0
offset_right = 1924.0
offset_bottom = -2.0

[node name="Scene" parent="Intro" instance=ExtResource("2_utfgo")]
z_index = 1
position = Vector2(-600, -247)

[node name="TxGoalTruck" type="Sprite2D" parent="Intro"]
z_index = 1
position = Vector2(1562, 814)
texture = ExtResource("3_ju436")

[node name="TextureObjectBox" type="Sprite2D" parent="Intro"]
z_index = 1
position = Vector2(872, 721)
texture = ExtResource("4_mftib")

[node name="Button" type="Button" parent="Intro"]
layout_mode = 2
offset_left = 87.0
offset_top = 64.0
offset_right = 1687.0
offset_bottom = 964.0
scale = Vector2(1.10799, 1.04972)
theme_override_font_sizes/font_size = 60

[node name="ColorRect" type="ColorRect" parent="Intro/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.285947, 0.625794, 0.608806, 1)

[node name="CustomerCircle" parent="Intro" instance=ExtResource("5_3w8rr")]
position = Vector2(1591, 275)
scale = Vector2(1, 1)

[connection signal="pressed" from="PausePanel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="button_down" from="Intro/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Intro/Button" to="." method="_on_button_pressed"]
